syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "deviced";

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message PushFrameToFlowOnceRequest {
  google.protobuf.StringValue id = 1 [(validator.field) = {msg_exists: true}];
  OpDevice device = 2 [(validator.field) = {msg_exists: true}];
  OpFrame frame = 3 [(validator.field) = {msg_exists: true}];
}